--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Electric</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/public/images/logo/favicon.ico" />
     <link rel="stylesheet" href="public/css/booking-popup.css" />
     <link rel="stylesheet" href="public/css/grid-section.css" />
     <link rel="stylesheet" href="public/css/header.css" />
@@ -254,7 +255,7 @@
         <h2>History</h2>
         <p>
           Peugeot is a brand with history. The first car to carry the Peugeot name was unveiled in 1889, making Peugeot the world's second oldest car
-          manufacturer and the oldest continuous car brand. Family business is now a global business. Today we are starting a new chapter.
+          manufacturer and the oldest continuous car brand. Today we are starting a new chapter.
           <br /><br /><strong>Electric</strong>, it is the future.
         </p>
       </article>
